sezon-1/5-ingress/fussy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/auth-url: https://httpbin.org/basic-auth/rick/M0rty

  name: fussy
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: fussy
             port:
               number: 80
